Change spacing list fields. Fix Nonetype err
Add checks to base.js to fix NoneType errs

--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -72,6 +72,10 @@ hr {
   gap: 10px;
 }
 
+.field-line {
+  margin-bottom: 8px;
+}
+
 /* Link Styles */
 a {
   color: #1696b9;
