--- a/auctions/static/sass/styles_sass.scss
+++ b/auctions/static/sass/styles_sass.scss
@@ -85,6 +85,9 @@ hr {
   width: 100%;
   @include flex-column;
 }
+.field-line {
+    margin-bottom: 8px;
+}
 
 /* Link Styles */
 a {
